--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 		<form>
 			<input type="text" placeholder="Enter the city name" id="inputValue">
 			<select id="days">
-				<option value="1day">1 day</option>
-				<option value="3days">3 days</option>
-				<option value="5days">5 days</option>
-				<option value="7days">7 days</option>
+				<option value="1">1 day</option>
+				<option value="3">3 days</option>
+				<option value="5">5 days</option>
+				<option value="7">7 days</option>
 			</select>
 			<button class="submit">Submit</button>
 		</form>
